[metadata]
description-file = README.rst
name = z_finder
version = attr: src.VERSION
description = Detecting Insurance Claims Fraud algorithms
long_description = file: README.rst
keywords = insurance fraud claim detection machine learning
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:


[options.package_data]
* = *.txt, *.csv, *.rst

[options.extras_require]
rest = pandas>=0.19, scikit-learn>=0.18, numpy, seaborn, matplotlib, imblearn, hdbscan, 
                      lightgbm, unidecode, tqdm, beautifulsoup4, requests,sphinx, networkx, docx, 
                      seaborn,  schedule


